See README and version control log for Test::Builder2 changes.

1.005000_006
    Misc
    * Update the resources meta data to point at the correct repository, issues
      mailing list and home page.


1.005000_005  Thu Apr 26 15:23:25 PDT 2012
    New Features
    * cmp_ok() will error when used with something which is not a
      comparison operator, including =, += and the like.
      [github 141]

    Bug Fixes
    * Using a reference as a test name works again.  [github #264]
    * Protected against Test::More accidentally overwriting $!
      [github #268] [github #266]
    * Restored the behavior of a fork, it will not issue its own
      plan, making testing with fork easier.
    * Test::Builder->name() has been restored. [github #220]
      (Matthew Horsfall)
    * TB2::BlackHole no longer tries to AUTOLOAD its destructor.
      [github #280] (Peter Rabbitson)
    * Threads work on 5.12 and 5.10 again. (Peter Rabbitson)

    Doc Fixes
    * use_ok() has been discouraged and de-emphasized as a general
      replacement for `use` in tests. [github #288]

    Incompatible Changes with previous alphas
    * TB2::Counter has been removed [github 119]
    * The test counter has been moved from the TAP formatter
      into TB2::History [github 190]
    * TB2::TestState is no longer a complete subclass of
      TB2::EventCoordinator, but delegates most EC methods.  The isa/can
      trickery caused threading issues. [github 291]
    * TB2::TestState->current_coordinator is now TB2::TestState->ec.
    * use_ok() will no longer apply lexical pragams.  The incompatibilities
      and extra complexity is not worth the marginal use.
      [github #287]


1.005000_004  Sun Mar 25 15:01:49 BST 2012
    Bug Fixes
    * Fix the thread crashes occurring with 5.12 and down.
      [github 261]

    Test Fixes
    * t/History/child_process.t was failing, the forked processes were
      improperly coordinated.

    Incompatible Changes with previous alphas